--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.3"
+    "@playwright/test": "^1.58.2",
+    "@types/node": "^24.3.3",
+    "allure-playwright": "^3.4.5"
   }
 }
