--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,9 +19,18 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
+    - name: Run tests and generate report
+      run: npx allure run -- npm run test
+    - name: Run Allure Action
+      uses: allure-framework/allure-action@v0
+      with:
+          report-directory: "./allure-report"
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+permissions:
+  pull-requests: write
+  checks: write
